cabal-version:       >=1.10

name:                tic-tac-toe-cli
version:             0.1.0.0
author:              Jonatan Borkowski
maintainer:          jonatan.borkowski@pm.me
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable tic-tac-toe-cli
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.14 && <4.15
  -- hs-source-dirs:      src
  default-language:    Haskell2010
